# m365-connector

./: .gitignore  README.md  pyproject.toml
cli/: setup_wizard.py
m365_connector/: __init__.py  _http.py  auth.py  calendar.py  client.py  credentials.py  delta.py  exceptions.py  files.py  folders.py  mail.py  oauth.py  permissions.py  storage.py  subscriptions.py
tests/: test_auth.py  test_delta.py  test_files.py  test_folders.py  test_mail.py  test_oauth_storage.py  test_subscriptions.py
